CameraActivity.kt MediaActivity.kt NotificationActivity.kt

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,5 +24,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/open_contact" />
+    <Button
+        android:id="@+id/openNotificationBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/open_notification" />
+    <Button
+        android:id="@+id/openCameraBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/open_camera" />
 
 </LinearLayout>
