--- a/app/src/main/res/layout/activity_runtime_permission.xml
+++ b/app/src/main/res/layout/activity_runtime_permission.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RuntimePermissionActivity">
+    tools:context=".eight.RuntimePermissionActivity">
 
     <Button
         android:id="@+id/makeCall"
