--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".three.FirstActivity">
+    tools:context=".three.ThirdActivity">
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button1" />
+        android:text="@string/button3" />
 
 </LinearLayout>
