--- a/app/src/main/res/layout/activity_three_first.xml
+++ b/app/src/main/res/layout/activity_three_first.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".three.SecondActivity">
+    tools:context=".three.activity.FirstActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button2" />
+        android:text="@string/button1" />
 
 </LinearLayout>
