--- a/app/src/main/res/layout/activity_two_hello_world.xml
+++ b/app/src/main/res/layout/activity_two_hello_world.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".one.HelloWorldActivity">
+    tools:context=".two.hello_world.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,4 +14,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
