--- a/app/src/main/res/layout/activity_main_eight.xml
+++ b/app/src/main/res/layout/activity_main_eight.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".eight.MainEightActivity">
+    tools:context=".eight.MainActivity">
 
     <Button
         android:id="@+id/openContactActivity"
