--- a/app/src/main/res/layout/activity_six_practice_main.xml
+++ b/app/src/main/res/layout/activity_six_practice_main.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".five.MainFiveActivity">
+    tools:context=".six.practice.MainActivity">
 
     <Button
-        android:id="@+id/openFragment"
+        android:id="@+id/forceOffline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="打开Fragment"
+        android:text="Send force offline broadcast"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
