--- a/app/src/main/res/layout/activity_main_six.xml
+++ b/app/src/main/res/layout/activity_main_six.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".six.MainActivity">
 
     <Button
@@ -11,4 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="打开Broadcast" />
+
+    <Button
+        android:id="@+id/openPractice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="打开Practice" />
 </LinearLayout>
